objects/Salesforce_License_Count__c.object
<CustomObject>
    <description>Custom object to keep track of salesforce licence count whenever a user is created or deactivated</description>
    <label>User License Count</label>
    <nameField>
        <label>Salesforce License Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Licenses Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Activated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user license activated by</description>
        <label>Created/Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Licenses_Count</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_license__c</fullName>
        <label>Type of license</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_or_Activated__c</fullName>
        <label>Created or Activated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Created_Activated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User created or activated</description>
        <label>User Created/Activated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Licenses_Count1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_salesforce_license__c</fullName>
        <label>Total salesforce license</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Salesforce_License__c</fullName>
        <label>Remaining Salesforce License</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>